--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "react-hot-loader": "^1.3.1"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "express": "^4.14.0",
+    "jquery": "^3.2.1",
     "knex": "^0.12.7",
+    "materialize-css": "^0.98.1",
     "nodemon": "^1.11.0",
     "pg": "^6.1.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-materialize": "^0.18.1",
+    "react-router-dom": "^4.0.0",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0"
