--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.16.0",
+    "css-loader": "^0.28.0",
     "express": "^4.14.0",
     "jquery": "^3.2.1",
     "knex": "^0.12.7",
@@ -37,6 +38,7 @@
     "react-dom": "^15.4.2",
     "react-materialize": "^0.18.1",
     "react-router-dom": "^4.0.0",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0",
     "webpack-hot-middleware": "^2.15.0"
